[package]
name = "har_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
blake3 = "1.5.0"
bytes = "1.5.0"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.0", features = ["derive"] }
env_logger = "0.11.1"
generic-array = "1.0.0"
log = "0.4.20"

[dev-dependencies]
tempfile = "3.10.0"

[[bin]]
name = "har_test"
path = "src/har_test.rs"
